# parser_project_sydorchuk

./: Cargo.toml  README.md
src/: expression.txt  grammar.pest  lib.rs  main.rs
tests/: tests.rs
